fix endpoint cenarios update readme