@@ -8,6 +8,8 @@ import io.swagger.v3.oas.annotations.tags.Tags;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
+
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -26,12 +28,16 @@ public class ListarTodosCenariosController {
     }
 
     @GetMapping("/api/cenarios")
-    public CollectionModel<EntityModel<Cenario>> action() {
-        return CollectionModel.of(repositorio
+    public ResponseEntity<?> action() {
+        var cenarios = repositorio.findAll();
+        if (cenarios.isEmpty())
+            return ResponseEntity.ok().body(cenarios);
+
+        return ResponseEntity.ok(CollectionModel.of(repositorio
                 .findAll()
                 .stream()
                 .map(modelAssembler::toModel)
-                .collect(Collectors.toList()),
-            linkTo(methodOn(ListarTodosCenariosController.class)).withSelfRel());
+                .toList(),
+            linkTo(methodOn(ListarTodosCenariosController.class)).withSelfRel()));
     }
 }
